<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Is it Vegan?</string>
    <string name="v_def">veg·an (ˈvēɡən): noun - a person who does not eat or use animal products. adjective - using or containing no animal products</string>
    <string name="start_but">Start Quiz!</string>
    <string name="q_count">Question #<xliff:g>%s</xliff:g></string>
    <string name="f">false</string>
    <string name="t">true</string>
</resources>
