<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.isitvegan.MainActivity"
    android:background="#424242"
    android:fillViewport="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        >

        <!--Intro Overlay-->
        <LinearLayout
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:textAlignment="center"
                android:layout_marginBottom="24dp"
                />
            <TextView
                android:id="@+id/def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/v_def"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginBottom="24dp"
                android:padding="20dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start_but"
                android:onClick="goToMainActivity"
                android:background="@drawable/button"
                android:textSize="50sp"
                android:padding="16dp"
                />
        </LinearLayout>
        <!--Main Activity-->
        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <!--Quiz content-->
                <TextView
                    android:id="@+id/q"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q_count"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    />

                <TextView
                    android:id="@+id/food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:text="blah"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    />

                <!--Checkboxes-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp"
                    >

                    <!--False box-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <CheckBox
                            android:id="@+id/f"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="1.5"
                            android:scaleY="1.5"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textSize="10sp"
                            android:tag="f"
                            android:onClick="nextFood"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/f"
                            android:layout_gravity="center_horizontal"
                            android:textSize="25sp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/colorPrimary"
                            />
                    </LinearLayout>

                    <!--True box-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <CheckBox
                            android:id="@+id/t"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:scaleX="1.5"
                            android:scaleY="1.5"
                            android:layout_gravity="center_horizontal"
                            android:tag="t"
                            android:onClick="nextFood"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/t"
                            android:layout_gravity="center_horizontal"
                            android:textSize="25sp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/colorPrimary"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!--Ending Activity-->
        <LinearLayout
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_text"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>